fixed spacing

--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ a:hover {
 
 /* PAGES */
 .gallery img {
-    width: 100%;
+    width: 90%;
 }
 
 .gallery h2 {
